--- a/CapaUsuario/CapaUsuario.csproj
+++ b/CapaUsuario/CapaUsuario.csproj
@@ -74,6 +74,12 @@
     <Compile Include="InformacionPagos.Designer.cs">
       <DependentUpon>InformacionPagos.cs</DependentUpon>
     </Compile>
+    <Compile Include="PagoInfraccionVehiculo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PagoInfraccionVehiculo.Designer.cs">
+      <DependentUpon>PagoInfraccionVehiculo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AgregarInfraccionVehiculo.resx">
@@ -87,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InformacionPagos.resx">
       <DependentUpon>InformacionPagos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PagoInfraccionVehiculo.resx">
+      <DependentUpon>PagoInfraccionVehiculo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
