Lógica para agregar un nuevo tipo infracción

--- a/CapaUsuario/CapaUsuario.csproj
+++ b/CapaUsuario/CapaUsuario.csproj
@@ -50,11 +50,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModificarTipoInfraccion.cs">
+    <Compile Include="AgregarNuevoTipoInfraccion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ModificarTipoInfraccion.Designer.cs">
-      <DependentUpon>ModificarTipoInfraccion.cs</DependentUpon>
+    <Compile Include="AgregarNuevoTipoInfraccion.Designer.cs">
+      <DependentUpon>AgregarNuevoTipoInfraccion.cs</DependentUpon>
     </Compile>
     <Compile Include="AgregarInfraccionVehiculo.cs">
       <SubType>Form</SubType>
@@ -88,8 +88,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ModificarTipoInfraccion.resx">
-      <DependentUpon>ModificarTipoInfraccion.cs</DependentUpon>
+    <EmbeddedResource Include="AgregarNuevoTipoInfraccion.resx">
+      <DependentUpon>AgregarNuevoTipoInfraccion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AgregarInfraccionVehiculo.resx">
       <DependentUpon>AgregarInfraccionVehiculo.cs</DependentUpon>
