--- a/CapaUsuario/CapaUsuario.csproj
+++ b/CapaUsuario/CapaUsuario.csproj
@@ -68,6 +68,12 @@
     <Compile Include="AgregarVehiculo.Designer.cs">
       <DependentUpon>AgregarVehiculo.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditarTipoInfraccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarTipoInfraccion.Designer.cs">
+      <DependentUpon>EditarTipoInfraccion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Index.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +102,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgregarVehiculo.resx">
       <DependentUpon>AgregarVehiculo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarTipoInfraccion.resx">
+      <DependentUpon>EditarTipoInfraccion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
