--- a/CapaUsuario/CapaUsuario.csproj
+++ b/CapaUsuario/CapaUsuario.csproj
@@ -74,6 +74,12 @@
     <Compile Include="EditarTipoInfraccion.Designer.cs">
       <DependentUpon>EditarTipoInfraccion.cs</DependentUpon>
     </Compile>
+    <Compile Include="EliminarTipoInfraccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EliminarTipoInfraccion.Designer.cs">
+      <DependentUpon>EliminarTipoInfraccion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Index.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="EditarTipoInfraccion.resx">
       <DependentUpon>EditarTipoInfraccion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EliminarTipoInfraccion.resx">
+      <DependentUpon>EliminarTipoInfraccion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
