--- a/CapaDatos/App.config
+++ b/CapaDatos/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     
-  </connectionStrings>
+  <add name="SistemaInfraccionesDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=serversistemainfracciones.database.windows.net;initial catalog=SistemaInfraccionesDB;user id=santiago001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
